  * Improve a2enmod to enable apache-htcacheclean with systemctl and let
    it enable 'apache-htcacheclean@instance.service' for multi-instance
    support.
  * Improve setup-instance to rely on the systemd apache2@instance.service for
    multi-instance support.
  * Drop /lib/systemd/system/apache2.service.d/forking.conf now that we have
    proper native systemd support.

 -- Stefan Fritsch <sf@debian.org>  Sat, 13 Aug 2016 13:38:30 +0200

apache2 (2.4.23-4) unstable; urgency=medium

  * Fix pre-inst script for new installations. Closes: #834169

 -- Stefan Fritsch <sf@debian.org>  Fri, 12 Aug 2016 21:44:31 +0200

apache2 (2.4.23-3) unstable; urgency=low

  * Fix conffiles that may have got the wrong content during upgrade from
    wheezy to early jessie versions. Closes: #794933
  * Also restore re-introduced *.load files for mod_ident, mod_imagemap, and
    mod_cern_meta. These may have gone missing due to dpkg thinking they still
    belong to apache2.2-common. Reported by Markus Waldeck.
  * apache2-maintscript-helper: Make apache2_switch_mpm do nothing if the
    local admin has disabled the requested mpm manually.
    Closes: #827446, #799630
  * Make mod_proxy_html depend on mod_xml2enc.
  * dh_apache2: Make versioned recommends on apache2 less strict. There is
    no advantage in recommending the current version. Closes: #784290

 -- Stefan Fritsch <sf@debian.org>  Thu, 11 Aug 2016 21:40:35 +0200

apache2 (2.4.23-2) unstable; urgency=high

  * CVE-2016-5387: Sets environmental variable based on user supplied Proxy
    request header.
    Don't pass through HTTP_PROXY in server/util_script.c

 -- Stefan Fritsch <sf@debian.org>  Thu, 21 Jul 2016 23:21:37 +0200

apache2 (2.4.23-1) unstable; urgency=high

  * New upstream release
    - Security: CVE-2016-4979: Fix bypass of TLS client certificate
      verification in mod_http2.
    - new modules mod_proxy_http2 (experimental) and mod_proxy_hcheck