@@ -148,13 +148,16 @@ override_dh_fixperms-indep:
 
 override_dh_installinit:
 	dh_installinit --error-handler=true
-	dh_installinit --name apache-htcacheclean --noscripts
+	# We enable apache-htcacheclean but we don't start it, some
+	# custom postinst code will then manually either disable it or
+	# start the service
+	dh_installinit --name apache-htcacheclean --no-start
 
 override_dh_systemd_enable:
 	dh_systemd_enable -papache2 apache2.service
 	dh_systemd_enable -papache2 --name=apache2@ apache2@.service
-	dh_systemd_enable -papache2 --no-enable --name=apache-htcacheclean apache-htcacheclean.service
-	dh_systemd_enable -papache2 --no-enable --name=apache-htcacheclean@ apache-htcacheclean@.service
+	dh_systemd_enable -papache2 --name=apache-htcacheclean apache-htcacheclean.service
+	dh_systemd_enable -papache2 --name=apache-htcacheclean@ apache-htcacheclean@.service
 
 override_dh_installdocs-indep:
 	# TODO: So, did anyone check convert_docs needs an update? ;)
